# autoswappr-backend

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
.sqlx/: query-347456aadfedc0d0da6320f15c6f4370b699a07cf05126531cfd3acb8c43daa4.json  query-5063f5c642e712081e980b0e3076161b0e0aaf25068a8351091c7bc03755e75e.json  query-60cf10b65b5cc8abab0299b68665ffb8889ba426863629037bfd651f22486767.json  query-68c2c145dc7ac55ae9056574836643e3ab7996d5f95553fbdd92336d47e0f01d.json  query-aeb3902897f255f41650e92e63a7cbe8bff79f486e3a79ea1ca94c976daf8242.json
migrations/: 20241122185351_setup.sql
scripts/: init_db.sh
src/: api_error.rs  config.rs  db.rs  lib.rs  main.rs  middleware.rs  telemetry.rs
src/http/: activity_log_retrieval.rs  auto_swap_service.rs  health_check.rs  mod.rs  percentage_update.rs  subscription.rs  transaction_logs.rs  types.rs  unsubscription.rs
src/routes/: routes_handler.rs
src/service/: mod.rs  transaction_logs.rs
src/utils/: anvu.rs  ekubo.rs  erc20.rs  ethereum.rs  mod.rs  starknet.rs
tests/api/: activity_log_retrieval.rs  address_validation.rs  ethereum.rs  health_check.rs  helpers.rs  main.rs  percentage_update.rs  subscription.rs  token_allowance.rs  transaction_logs.rs  unsubscription.rs
